k8s-demos-exercices-ok/app-vote/network-policy/result-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result-ui
  name: result-ui
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-ui
  template:
    metadata:
      labels:
        app: result-ui
    spec:
      containers:
        - image: mohamed1780/result-ui
          name: result-ui
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: result-ui
