k8s-demos-exercices-ok/app-vote/network-policy/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  ports:
    - name: "vote-service"
      port: 5000
      targetPort: 5000
  selector:
    app: vote
