k8s-demos-exercices-ok/app-vote/network-policy/vote-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-ui
  name: vote-ui
  namespace: vote
spec:
  type: NodePort
  ports:
    - name: "vote-ui-service"
      port: 5000
      targetPort: 80
      nodePort: 31000
  selector:
    app: vote-ui
