k8s-demos-exercices-ok/app-vote/network-policy/allow-vote-ui-to-vote.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-ui-to-vote
  namespace: vote
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vote-ui
    ports:
    - protocol: TCP
      port: 5000  # Autorise uniquement le trafic sur le port 5000
