k8s-demos-exercices-ok/app-vote/network-policy/deny-traffic-between-vote-and-vote-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-traffic-from-vote-to-vote-ui
  namespace: vote
spec:
  podSelector:
    matchLabels:
      app: vote-ui
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: result-ui
